--- a/flask/templates/contact.html
+++ b/flask/templates/contact.html
@@ -9,7 +9,7 @@
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
-        {% endif %} {% endwith %}
+        {% endif %} {% endwith %}clear
         <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
         <form method= "POST" name="sentMessage" id="contactForm" novalidate>
           <div class="control-group">
